# proyects

./: LICENSE  README.md
Configurations/: README.md  pyproject.toml  upload_update.sh
Configurations/configurations/: __init__.py
Configurations/configurations/classes/: configurations.py  setting.py
DataPackage/: .gitignore  README.md  pyproject.toml  upload_update.sh
DataPackage/datapackage/: __init__.py
DataPackage/datapackage/classes/: datapackage.py
DataPackage/tests/: client_tcpip_test.py  communication_test.py  complex_parameters_test.py  complex_test.py  server_tcpip_test.py
DataValue/: .gitignore  README.md  __init__.py  pyproject.toml  upgrade.sh  upgrade.sh.  upload_update.sh
DataValue/datavalue/: __init__.py
DataValue/datavalue/classes/: complex_data.py  primitive_data.py
DataValue/datavalue/exceptions/: __init__.py
DataValue/docs/: complex.md  primitive.md
DataValue/src/classes/: primitive_data.py
DataValue/tests/: ComplexData_test.py  PrimitiveData_test.py  test.py
GSMSTurtle/: .gitignore  ANALISIS_PROYECTO.md  ARQUITECTURA.md  README.md  RESUMEN_ARCHIVOS.md  debut_out.logclear  main_probe.py
GSMSTurtle/docs/designs/: architecture.md
GSMSTurtle/docs/problems/: Deteccion e identificacion de tarjeta SIM. Inconsistencia de estados y variabilidad de modelos  Deteccion y actualizacion de tarjetas SIM  Notificacion y manejo de eventos en el nucleo  Sistema de notificacion de eventos (implementacion)
GSMSTurtle/src/contracts/data_classes/: complex_data.py  message.py  phone_number.py  primitive_data.py
GSMSTurtle/src/contracts/device_controller/: configurations.py  constants.py  device_controller.py  setting.py
GSMSTurtle/src/contracts/events/: __init__.py  message_received.py  sim_removed.py
GSMSTurtle/src/controllers/: __init__.py
SMSGateAPI/: __init__.py
SMSGateAPI/data/classes/: __init__.py  device.py  sms.py
SecureFileHandler/: pyproject.toml  upload_update.sh
SecureFileHandler/securefilehandler/: __init__.py
SecureFileHandler/securefilehandler/handlers/: __init__.py  localfilehandler.py  virtualfilehandler.py
SecureFileHandler/tests/: file_probe.encrypted  localfile_test.py  virtualfile_test.py
Sparky/: .gitignore  README.md  data_probe.json  ejemplo_codigo.py  sparky.py
Sparky/src/: __init__.py
Sparky/src/data/: __init__.py  classes.py
Sparky/src/interfaces/: __init__.py  cli.py  code.py
Stark/: LinkBuilder.py  LinkBuilderv2.py  LinkCompiler.sh  README.md  constructor.py  result.info  utils.py  vpstunnel.ps1
Stark/application/: LinkCompiler.sh  stark-test-autoprotection-negotiation.py  stark-test-client-sessionlayer.py  stark-test-control-master.py  stark-test-interactive-client.py  stark-test-listener-interactive-server  stark-test-protection-negotiation-complex.py  stark-test-protection-negotiation.py  stark-test-protection.py  stark-test-server-sessionlayer.py  stark-test-sessionlayer.py  stark-test-transport.py
Stark/application/link/: Stark-Link.py  probe.sh  restore.ps1
Stark/build_temp/: Stark-Link.py  Stark-Link.spec  version.txt
Stark/build_temp/system/: __init__.py  configurations.py
Stark/distribution_link/: Stark-Link.py
Stark/distribution_link/system/: __init__.py  configurations.py
Stark/docs/: Construccion de software.md  Marcado de etiquetas.md
WebController/: pyproject.toml  upload_update.sh
WebController/docs/: Components structure.md  WebController generic interface contract.md
WebController/src/: __init__.py
WebController/src/data/: __init__.py
WebController/src/data/classes/: __init__.py  webfolder.py  webpage.py
WebController/src/data/properties/: __init__.py  exceptions.py
WebController/src/webcontroller_stc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
WebController/src/webcontroller_stc/classes/: webbrowser.py  webcontroller.py  website.py
WebController/src/webcontroller_stc/controllers/: __init__.py  chrome.py
WebController/src/webcontroller_stc/properties/: constants.py
WorkManager/: README.md
(+111 files in other folders)
