[build-system]
requires = ["setuptools>=61.0", "datavalue", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configurations-stc"
version = "0.1.5" 
description = "Librería de configuraciones y ajustes con tipos de datos ricos"
readme = "README.md"
authors = [{ name="Specter" }]
requires-python = ">=3.10"
dependencies = [
    "datavalue"
]

[tool.setuptools.packages.find]
include = ["configurations*"]
exclude = ["docs*", "tests*"]