[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datavalue"
version = "0.1.3" 
description = "Librería de tipos de datos primitivos y complejos"
readme = "README.md"
authors = [{ name="Specter" }]
requires-python = ">=3.10"

[tool.setuptools]
packages = { find = {} }