[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "securefilehandler"
version = "0.1.0" 
description = "Librería de manejo seguro de datos (criptografia) sobre archivos"
readme = "README.md"
authors = [{ name="Specter" }]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["securefilehandler*"]
exclude = ["docs*"]