[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webcontroller-stc"
version = "0.1.3" 
description = "Librería de interfaz de control de alto nivel de navegador web"
readme = "README.md"
authors = [{ name="Specter" }]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["webcontroller*"]
exclude = ["docs*"]
